[metadata]
name = beka
summary = A bare-bones BGP speaker
long_description =
    Beka is a fairly basic BGP speaker. It can send
    and receive unicast route updates in IPv4 and IPv6,
    but not too much else. It is designed to be simple to use
    and to extend, without too much overhead.

    It uses eventlet for concurrency, but is easy enough to port to
    gevent if that takes your fancy.

    More information at https://github.com/faucetsdn/beka
license = Apache-2
author = Sam Russell
author-email = sam.h.russell@gmail.com
home-page = https://github.com/faucetsdn/beka
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
keywords =
    bgp
    beka
    routing
    sdn
    networking

[files]
packages =
    beka

license_file = LICENSE

[bdist_wheel]
universal=0

[pytype]
python_version = 3.6
pythonpath =
    .:
    beka:
    test:
disable =
    pyi-error,
    import-error
